<resources>
    <!--Start : Titles-->
    <string name="app_name">Recommender App</string>

    <string name="title_activity_main">MainActivity</string>

    <!--End : Titles-->

    <!--Start : Bottom Navigation Buttons Names-->

    <string name="title_home">Home</string>
    <string name="title_messaging">Messaging</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_community">Community</string>

    <string name="Paragraph"> Mr. Mercedes is a crime novel by American writer Stephen King. It is his 62nd novel and the 44th published under his own name. He calls it his first hard-boiled detective book. It was published on June 3, 2014. </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Create New Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--End : Bottom Navigation Buttons Names-->

</resources>
